--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -8,6 +8,11 @@ spec:
     matchLabels:
       app: post-service-pod
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
   template:
     metadata:
       labels:
@@ -16,22 +21,60 @@ spec:
     spec:
       containers:
         - name: post-service-container
-          image: epamnikitafaskheyeu/post-service-app:v1.1
+          image: epamnikitafaskheyeu/post-service-app:v1.3
           env:
             - name: DB_HOST
-              value: post-service-db
+              valueFrom:
+                configMapKeyRef:
+                  name: post-service-env-config
+                  key: DB_HOST
             - name: DB_PORT
-              value: "5432"
+              valueFrom:
+                configMapKeyRef:
+                  name: post-service-env-config
+                  key: DB_PORT
             - name: DB_NAME
-              value: post-db
+              valueFrom:
+                configMapKeyRef:
+                  name: post-service-env-config
+                  key: DB_NAME
             - name: DB_USERNAME
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: post-db-credentials
+                  key: DB_USERNAME
             - name: DB_PASSWORD
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: post-db-credentials
+                  key: DB_PASSWORD
             - name: USER_SERVICE_URL
-              value: http://user-service-app:8084
+              valueFrom:
+                configMapKeyRef:
+                  name: post-service-env-config
+                  key: USER_SERVICE_URL
           ports:
             - containerPort: 8080
+          startupProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 60
+            periodSeconds: 20
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 20
+            periodSeconds: 20
+            failureThreshold: 5
 
 ---
 
@@ -53,23 +96,59 @@ spec:
     spec:
       containers:
         - name: user-service-container
-          image: epamnikitafaskheyeu/user-service-app:v1.1
+          image: epamnikitafaskheyeu/user-service-app:v1.2
           env:
             - name: DB_HOST
-              value: user-service-db
+              valueFrom:
+                configMapKeyRef:
+                  name: user-service-env-config
+                  key: DB_HOST
             - name: DB_PORT
-              value: "5432"
+              valueFrom:
+                configMapKeyRef:
+                  name: user-service-env-config
+                  key: DB_PORT
             - name: DB_NAME
-              value: user-db
+              valueFrom:
+                configMapKeyRef:
+                  name: user-service-env-config
+                  key: DB_NAME
             - name: DB_USERNAME
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: user-db-credentials
+                  key: DB_USERNAME
             - name: DB_PASSWORD
-              value: postgres
+              valueFrom:
+                secretKeyRef:
+                  name: user-db-credentials
+                  key: DB_PASSWORD
           ports:
             - containerPort: 8080
           volumeMounts:
             - name: user-volume
               mountPath: /app/data
+          startupProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 30
+            failureThreshold: 4
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 20
+            periodSeconds: 20
+            failureThreshold: 5
       volumes:
         - name: user-volume
           persistentVolumeClaim:
