--- a/post-service/src/main/resources/application.yml
+++ b/post-service/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     exclude: org.springframework.boot.autoconfigure.h2.H2ConsoleAutoConfiguration
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
 hibernate:
   dialect: org.hibernate.dialect.PostgreSQLDialect
   show_sql: true
@@ -15,3 +15,17 @@ hibernate:
 services:
   user-service:
     url: ${USER_SERVICE_URL:http://localhost:8080}
+
+management:
+  endpoints:
+    enabled-by-default: false
+  endpoint:
+    health:
+      enabled: true
+      probes:
+        enabled: true
+  health:
+    readinessState:
+      enabled: true
+    livenessState:
+      enabled: true
