--- a/k8s/config-map.yml
+++ b/k8s/config-map.yml
@@ -45,3 +45,28 @@ data:
     values ('John Smith', 2);
     insert into users (username, amount_of_posts)
     values ('Jane Smith', 0);
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  namespace: k8s-program
+  name: post-service-env-config
+data:
+  DB_HOST: "post-service-db"
+  DB_PORT: "5432"
+  DB_NAME: "post-db"
+  USER_SERVICE_URL: "http://user-service-app:8084"
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  namespace: k8s-program
+  name: user-service-env-config
+data:
+  DB_HOST: "user-service-db"
+  DB_PORT: "5432"
+  DB_NAME: "user-db"
