--- a/post-service/build.gradle
+++ b/post-service/build.gradle
@@ -21,6 +21,7 @@ tasks.named('test') {
 dependencies {
     implementation project(':common')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'com.h2database:h2'
     implementation 'org.postgresql:postgresql'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
