--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -19,6 +19,7 @@ dependencies{
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.postgresql:postgresql'
     implementation 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 repositories {
