--- a/helm/templates/service.yml
+++ b/helm/templates/service.yml
@@ -4,12 +4,12 @@ metadata:
   name: post-service-app
   namespace: {{ .Values.namespace }}
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: post-service-pod
   ports:
     - protocol: TCP
-      port: 8083
+      port: 8080
       targetPort: 8080
 
 ---
@@ -20,12 +20,12 @@ metadata:
   name: user-service-app
   namespace: {{ .Values.namespace }}
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: user-service-pod
   ports:
     - protocol: TCP
-      port: 8084
+      port: 8080
       targetPort: 8080
 
 ---
